<resources>
    <string name="app_name">Send Later</string>
    <string name="sent">Sent</string>
    <string name="remaining">Remaining</string>
    <string name="createNew">Create New</string>
    <string name="saveMsg">Save Message</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="deleteConfirmation">Deleted messages will be not sent.</string>
    <string name="ok">OK</string>
    <string name="noMsgToShow">There are no saved messages. Create a new message to send later.</string>
    <string name="enterUrMsg">Enter your message</string>
    <string name="chooseDate">Choose Date</string>
    <string name="chooseTime">Choose Time</string>
    <string name="chosenDate">Chosen Date: —</string>
    <string name="chosenTime">Chosen Time: —</string>
    <string name="chosenDateWithPlaceHolders">%1$d/%2$s/%3$d</string>
    <string name="chosenTimeWithPlaceHolders">%1$d:%2$s</string>
    <string name="errorMsgForTime">You chosen a Invalid Time. Please choose time greater than the current time.</string>
    <string name="resettingTheViews">Clearing the data.</string>
    <string name="charCount">%1$d/160</string>
    <string name="selectContacts">Click here to Select Contact(s)</string>
    <string name="or">Or</string>
    <string name="enterNumber">Enter 10 digit mobile number</string>
    <string name="contactDetailsInList">%1$s | %2$s : %3$s</string>
    <string name="loadingContacts">Loading.... %1$d/%2$d</string>
    <string name="selectedContacts">%1$s : %2$s</string>
    <string name="enterValidNumber">Please enter a valid 10 digit phone number</string>
    <string name="selectDate">Please chose date</string>
    <string name="selectTime">please chose time</string>
    <string name="msgSaved">Message is saved to send later.</string>
    <string name="msgNotSaved">Message is not saved. Try again.</string>
</resources>